# orion-consultant

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .n8n_live_for_auth.sqlite  AGENTS.md  Dockerfile  Dockerfile.optimized  NEXT_PHASES_ORION.md  README.md  ROADMAP_LLM_ORION_STRATEGIC_EVALUATION.md  commit_fix.bat  commit_vigilante.bat  config.py  docker-compose.yml  main.py  mcp_server.py  metrics.py  msg.txt  n8n_login.json  pyproject.toml  requirements.txt  test_vigilante_integration.py  tmp_n8n_insert.py
agents/: __init__.py  pattern_expert.py  rag_client.py  risk_manager.py  trend_analyzer.py  vigilante_agent.py
models/: __init__.py  schemas.py
n8n/: workflow_agent_chat.json  workflow_mcp_ai_agent.json  workflow_notification_trading_decision.json  workflow_notification_trading_error.json  workflow_trading_signal.json  workflow_vigilante_rag_memory.json  workflow_vigilante_tester.json
scripts/: offline_scorer.py  smoke_test_orion.ps1
src/test/java/com/orion/application/decision/: DecisionPolicyEngineBranchTest.java  OrionConsultPayloadBuilderBranchTest.java  StrategicEvaluationServiceBranchTest.java
tests/: __init__.py  conftest.py  test_api.py  test_n8n_facade.py  test_pattern_expert.py  test_risk_manager.py  test_trend_analyzer.py
utils/: context_extractors.py  performance_metrics.py  win_rate_context.py
